--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="project-MediaQuery project">
             <h3>Media Queries</h3>
-            <a target="_blank" href="file:///C:/Users/Acer/cole/media/index.html">
+            <a target="_blank" href="html/media-query/media.html">
                 <img src="images/Media.png" alt="Media Queries">
             </a>
         </div>
