--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="project-container">
         <div class="project-Fashion project">
             <h3>Fashion Blog</h3>
-            <a target="_blank" href="https://Marion-png.github.io/html/fashionblog.html">
+            <a target="_blank" href="https://Marion-png.github.io/html/fashionblog/fashionblog.html">
                 <img src="images/Fashion-Blog.png" alt="Fashion Blog">
             </a>
         </div>  
