--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
     <div class="project-container">
         <div class="project-Fashion project">
             <h3>Fashion Blog</h3>
-            <a target="_blank" href="https://Marion-png.github.io/html/fashionblog/fashionblog.html">
+            <a target="_blank" href="https://Marion-png.github.io/fashionblog">
                 <img src="images/Fashion-Blog.png" alt="Fashion Blog">
             </a>
         </div>  
     
         <div class="project-Healthy project">
             <h3>Healthy Recipes</h3>
-            <a target="_blank" href="https://marion-png.github.io/HealthyRecipes">
+            <a target="_blank" href="https://Marion-png.github.io/HealthyRecipes">
                 <img src="images/HealthyRecipes.png" alt="Healthy Recipes">
             </a>
         </div>
