--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
         <div class="project-Woodruff project">
             <h3>Woodruff Project</h3>
-            <a target="_blank" href="file:///C:/Users/Acer/cole/Olivia/Olivia.html">
+            <a target="_blank" href="https://Marion-png.github.io/Olivia.html">
                 <img src="images/Olivia.png" alt="Woodruff Project">
             </a>
         </div>
