--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
         <div class="project-Healthy project">
             <h3>Healthy Recipes</h3>
-            <a target="_blank" href="https://Marion-png.github.io/HealthyRecipes">
+            <a target="_blank" href="https://Marion-png.github.io/healthyrecipes.html">
                 <img src="images/HealthyRecipes.png" alt="Healthy Recipes">
             </a>
         </div>
