--- a/media.html
+++ b/media.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Media Query Demo</h1>
-    
+    <!-- 
+      1. Add your profile image here (recommended size is 500x500). 
+      2. Make sure to resize the image on different screen widths.
+      3. Hide the image in a smaller screen width.
+    -->
 </body>
 </html>
