--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cole CSS Activty 3 MQ</title>
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Media Query Demo</h1>
